--- a/Ajax/Dosya/ErisimIzniniKaldirDers.cshtml
+++ b/Ajax/Dosya/ErisimIzniniKaldirDers.cshtml
@@ -20,20 +20,19 @@
 
      var db=Database.Open("fb1ae");
  
-     var queryDosya=db.QuerySingle("SELECT * FROM Dosya WHERE DosyaID=@0 AND UserID=@1",DosyaID,WebSecurity.CurrentUserId);
+     var queryIslem=db.QueryValue("exec dbo.Dosya_ErisimIzniniKaldirDers @0,@1,@2",WebSecurity.CurrentUserId,DersID,DosyaID);
 
-    if (WebSecurity.CurrentUserId!=queryDosya.UserID)
+    if (queryIslem=="OK")
     {
-        Response.StatusCode=400;
+        db.Close();
+        Response.Write("OK");
+        Response.End();    
+    }
+    else
+    {
+        db.Close();
+        Response.StatusCode=501;
         Response.End();
     }
-     db.Execute("DELETE FROM DersDosyalari WHERE DosyaID=@0 AND DersID=@1",DosyaID,DersID);
-     db.Execute("DELETE FROM DosyaIzinDers WHERE DosyaID=@0 AND DersID=@1",DosyaID,DersID);
-     db.Execute("UPDATE Bildirim SET Silindi=1 WHERE IliskiliOge=@0","drsdsy" + DosyaID.ToString());
-     db.Execute("UPDATE Aktivite SET Silindi=1 WHERE IliskiliOge=@0","drsdsy" + DosyaID.ToString());
-     db.Close();
-     Response.Write("OK");
-     Response.End();
-     
-    
-     }
+ 
+}
