--- a/Ajax/Odev/OdevGonderiBilgisiKaydet.cshtml
+++ b/Ajax/Odev/OdevGonderiBilgisiKaydet.cshtml
@@ -43,40 +43,23 @@
          DegerlendirmePuani=-1;
      }
 
-     var db=Database.Open("fb1ae");
+    var db=Database.Open("fb1ae");
  
-     var queryOdevGonderisi=db.QuerySingle("SELECT * FROM OdevGonderisi INNER JOIN Odev ON OdevGonderisi.OdevID=Odev.OdevID WHERE OdevGonderiID=@0",OdevGonderiID);
-     
-     var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0 AND Silindi=0",queryOdevGonderisi.DersID);
-     
-     if (queryDers==null)
-     {
-       db.Close();
-       Response.StatusCode=500;
-       Response.End();  
-     }
+    var queryIslem=db.QueryValue("exec dbo.Odev_OdevGonderiBilgisiKaydet @0,@1,@2,@3,@4",WebSecurity.CurrentUserId,OdevGonderiID,Durum,DersSorumlusuMesaji,DegerlendirmePuani);
 
-    if (WebSecurity.CurrentUserId==queryDers.UserID)
+    if (queryIslem=="OK")
     {
-        db.Execute("UPDATE OdevGonderisi SET Durum=@0,DersSorumlusuMesaji=@1,DegerlendirmePuani=@2 WHERE OdevGonderiID=@3",Durum,DersSorumlusuMesaji,DegerlendirmePuani,OdevGonderiID);
-        
-        // Gönderi için bir bildirim oluştur.
-        db.Execute("INSERT INTO Bildirim(Url,EylemiYapanUserID,EylemID,DersID) VALUES(@0,@1,@2,@3)","~/Odev/Goster?OdevID=" + queryOdevGonderisi.OdevID,WebSecurity.CurrentUserId,9,queryDers.DersID);
-        var eklenenBildirimID=db.GetLastInsertId();
-        
-        db.Execute("INSERT INTO BildirimOkunmasiGereken(UserID,BildirimID) VALUES (@0,@1)",queryOdevGonderisi.UserID,eklenenBildirimID);
-        
         db.Close();
         Response.Write("OK");
-        Response.End();
+        Response.End();    
     }
     else
     {
         db.Close();
-        Response.StatusCode=400;
+        Response.StatusCode=501;
         Response.End();
     }
-    
+   
 }
 
 
