--- a/Bildirim/Default.cshtml
+++ b/Bildirim/Default.cshtml
@@ -14,7 +14,7 @@
            Culture=UICulture="tr-TR";
        }
 
-    var queryBildirimler=db.Query("SELECT * FROM ViewBildirimOkunmasiGereken WHERE OkumasiGerekenUserID=@0 AND Silindi=0 ORDER BY BildirimID DESC",WebSecurity.CurrentUserId);
+    var queryBildirimler=db.Query("SELECT * FROM BildirimOkunmasiGereken INNER JOIN Bildirim ON Bildirim.BildirimID=BildirimOkunmasiGereken.BildirimID INNER JOIN Profiles ON Bildirim.EylemiYapanUserID=Profiles.userID WHERE BildirimOkunmasiGereken.UserID=@0 AND Bildirim.Silindi=0 ORDER BY BildirimOkunmasiGereken.BildirimID DESC",WebSecurity.CurrentUserId);
     
     List<Bildirim> listeBildirimler=new List<Bildirim>();
     foreach(var bildirim in queryBildirimler)
