--- a/Panel/Default.cshtml
+++ b/Panel/Default.cshtml
@@ -82,7 +82,10 @@
     }
     db.Close();
    
- }
+ }@section css
+{
+   <link rel="stylesheet" href="@Href("~/Shared/Plugins/summernote/summernote.css")">
+}
 
 @section SayfaBasligi
 {
@@ -223,7 +226,7 @@
   </div>
 </div> @if (roller.Contains("Ogretici")) {
 <div class="modal" id="modalYeniOdevVer" tabindex="-1" role="dialog" aria-labelledby="odevVermyModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -246,8 +249,8 @@
                         <input type="text" id="odevVertxtOdevBaslik" class="form-control" name="Baslik">
                         
                         <label>@Resources.Resource.lblOdevMetni</label>
+                        <div id="odevVertxtAciklama"></div>
                         
-                        <textarea name="Aciklama" class="form-control" rows="10" id="odevVertxtAciklama"></textarea>
                         
                </div>
             </div>
@@ -395,13 +398,12 @@
 @section js
 {
 
-    <script src="@Href("~/Shared/TemaBeyond/assets/js/editors/summernote/summernote.js")"></script>
-    <script>
-        $('#odevVertxtAciklama').summernote({ 
-        height: 150
-        });
-    </script>
-
+    <script src="@Href("~/Shared/Plugins/summernote/summernote.min.js")"></script>
+    @if  (dil=="tr")
+    {
+    <script src="@Href("~/Shared/Plugins/summernote/lang/summernote-tr-TR.js")"></script>     
+    }
+   
    <script src="@Href(string.Format("~/Panel/Js/Panel.Labels.{0}.js",dil))"></script>
    <script src="@Href("~/Panel/Js/Default.min.js")"></script>
 }
