--- a/Panel/Default.cshtml
+++ b/Panel/Default.cshtml
@@ -103,7 +103,7 @@
                                   </button>
                                                     @if (roller.Contains("Ogretici"))                       {
                        
-                               <ul class="dropdown-menu" aria-labelledby="dLabel">                                          <li><a href="#" data-toggle="modal" data-target="#modalDosyaEkle" title="Dosya Paylaş" data-toggle="tooltip" data-placement="top"><i class="fa fa-file fa-fw"></i> Dosya Paylaş </a></li>                                          <li><a href="#" data-toggle="modal" data-target="#modalDuyuruYap"><i class="fa fa-clipboard fa-fw"></i> Duyuru Ekle </a></li>                                          <li><a href="#" data-toggle="modal" data-target="#modalYeniOdevVer"><i class="fa fa-tasks fa-fw"></i> Ödev Ver </a></li>                                          <li><a href="#" data-toggle="modal" data-target="#modalDersEkle"><i class="fa fa-book fa-fw"></i> Ders Sayfası Oluştur </a></li>                                          </ul>   
+                               <ul class="dropdown-menu" aria-labelledby="dLabel">                                          <li><a href="#" data-toggle="modal" data-target="#modalDosyaEkle" title="Dosya Paylaş" data-toggle="tooltip" data-placement="top"><i class="fa fa-file fa-fw"></i> Dosya Paylaş </a></li>                                          <li><a href="#" data-toggle="modal" data-target="#modalDuyuruYap"><i class="fa fa-clipboard fa-fw"></i> Yazı Paylaş </a></li>                                          <li><a href="#" data-toggle="modal" data-target="#modalYeniOdevVer"><i class="fa fa-tasks fa-fw"></i> Ödev Ver </a></li>                                          <li><a href="#" data-toggle="modal" data-target="#modalDersEkle"><i class="fa fa-book fa-fw"></i> Ders Sayfası Oluştur </a></li>                                          </ul>   
                        
                        
                      
@@ -301,7 +301,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="duyuruYapmyModalLabel"> Duyuru Yap</h4>
+        <h4 class="modal-title" id="duyuruYapmyModalLabel"> Yazı Paylaş</h4>
       </div>
       <div class="modal-body">
      
@@ -316,7 +316,7 @@
                          }
                         </select>
                        
-                        <label>Duyuru</label>
+                        <label>Yazı</label>
                         <textarea name="MesajMetni" class="form-control" rows="8" id="duyuruYapMesajMetni"></textarea>
                         
                     </div>
