--- a/Ders/Default.cshtml
+++ b/Ders/Default.cshtml
@@ -155,7 +155,7 @@
                                             
                                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 stats-col">
                                                 <div class="stats-value pink">@duyuruSayisi</div>
-                                                <div class="stats-title">Duyuru</div>
+                                                <div class="stats-title">Yazı</div>
                                             </div>
                                         </div>
                                       
