--- a/Panel/Default.cshtml
+++ b/Panel/Default.cshtml
@@ -51,7 +51,7 @@
        a.UI_BegeniSayisi=db.QueryValue("SELECT count(*) FROM AktiviteBegeni WHERE AktiviteID=@0",aktivite.AktiviteID);
        a.UI_AktiviteOkundu=db.QueryValue("SELECT count(*) FROM AktiviteOkunan WHERE AktiviteID=@0",aktivite.AktiviteID);
        a.UI_GorunenTarih=Genel.DateLabel(aktivite.Tarih,dil);
-       var queryAktiviteUser=db.QuerySingle("SELECT * FROM Profiles INNER JOIN Unvan ON Profiles.UnvanID=Unvan.UnvanID  WHERE userID=@0",aktivite.UserID);
+       var queryAktiviteUser=db.QuerySingle("SELECT * FROM Profiles LEFT JOIN Unvan ON Profiles.UnvanID=Unvan.UnvanID  WHERE userID=@0",aktivite.UserID);
        if (aktivite.UserID==WebSecurity.CurrentUserId || roller.Contains("Ogretici"))
        {
            a.UI_SilmeDugmesi=1;
